--- a/Youtube_Comments_Sentiment_Analysis.ipynb
+++ b/Youtube_Comments_Sentiment_Analysis.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "## Here just to show I have done analysis on a video. \n",
-    "## URL of the video used = 'https://www.youtube.com/watch?v=dtp6b76pMak')"
+    "## URL of the video used = 'https://www.youtube.com/watch?v=dtp6b76pMak'"
    ]
   },
   {
