--- a/Youtube_Comments_Sentiment_Analysis.ipynb
+++ b/Youtube_Comments_Sentiment_Analysis.ipynb
@@ -558,7 +558,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert pdate to datetime \n",
+    "# Convert date to datetime \n",
     "df[\"date\"] = pd.to_datetime(df[\"date\"])"
    ]
   },
